# easyinit

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  configure  configure.py  rust-toolchain.toml
.cargo/: config.toml
api/: Cargo.toml
api/src/: lib.rs
cmdline/: Cargo.toml
config/: Cargo.toml
config/src/: crash_file_gen.rs  lib.rs
journal/: Cargo.toml
journal/src/: main.rs
journald/: Cargo.toml
kern_cmdline/: Cargo.toml
kern_cmdline/src/: lib.rs
logging/: Cargo.toml
logging/src/: lib.rs
panic-handler/: Cargo.toml
panic-handler/src/: lib.rs
src/: main.rs  panic.rs  signals.rs  startup.rs  util.rs
system/: Cargo.toml
system/src/: startup.rs
tools/py-logging/: __init__.py
user/: Cargo.toml
utils/: Cargo.toml
utils/src/: lib.rs  signals.rs
