[package]
name = "easyinit-config"
description = "Parses command line arguments, config files"
version.workspace = true
publish.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
cfg-if.workspace = true
nix = {workspace = true, features = ["fs"]}
[lints]
workspace = true

[features]
coreutils = []