[package]
name = "easyinit-kern-cmdline"
description = "Parse the kernel command line for easyinit options"
version.workspace = true
publish.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
[lints]
workspace = true
