[package]
name = "easyinit-logging"
version.workspace = true
publish.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
log = {features = ["std"],workspace = true}
thiserror.workspace = true
[lints]
workspace = true
