[package]
name = "easyinit-panic-handler"
description = "Panic handler for easyinit"
version.workspace = true
publish.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
backtrace = "0.3.76"

[lints]
workspace = true
