[package]
name = "easyinit-system"
description = "Handles the system scope of easyinit"
version.workspace = true
publish.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
nix = { workspace = true }
[lints]
workspace = true
